--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
+    "react-native-sound": "^0.11.2",
     "react-native-svg": "^15.11.2",
     "react-native-swipeable": "^0.6.0"
   },
