--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/slider": "^4.5.6",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
+    "@reduxjs/toolkit": "^2.7.0",
     "react": "19.0.0",
     "react-hook-form": "^7.56.1",
     "react-native": "0.79.1",
@@ -23,7 +25,9 @@
     "react-native-screens": "^4.10.0",
     "react-native-sound": "^0.11.2",
     "react-native-svg": "^15.11.2",
-    "react-native-swipeable": "^0.6.0"
+    "react-native-swipeable": "^0.6.0",
+    "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
