--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react": "19.0.0",
     "react-hook-form": "^7.56.1",
     "react-native": "0.79.1",
+    "react-native-gesture-handler": "^2.25.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
     "react-native-sound": "^0.11.2",
