--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
+    "axios": "^1.8.4",
+    "moment": "^2.30.1",
     "react": "19.0.0",
     "react-hook-form": "^7.56.1",
     "react-native": "0.79.1",
+    "react-native-country-codes-picker": "^2.3.5",
+    "react-native-date-picker": "^5.0.12",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
