--- a/package.json
+++ b/package.json
@@ -19,16 +19,18 @@
     "@reduxjs/toolkit": "^2.7.0",
     "react": "19.0.0",
     "react-hook-form": "^7.56.1",
-    "react-native": "0.79.1",
+    "react-native": "^0.79.1",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
     "react-native-sound": "^0.11.2",
+    "react-native-sound-player": "^0.14.5",
     "react-native-svg": "^15.11.2",
     "react-native-swipeable": "^0.6.0",
     "react-redux": "^9.2.0",
+    "react-scripts": "^5.0.1",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
