--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "@reduxjs/toolkit": "^2.7.0",
+    "@rneui/base": "^4.0.0-rc.8",
     "axios": "^1.8.4",
     "moment": "^2.30.1",
     "react": "19.0.0",
     "react-hook-form": "^7.56.1",
     "react-native": "^0.79.1",
+    "react-native-contacts": "^8.0.4",
     "react-native-country-codes-picker": "^2.3.5",
     "react-native-date-picker": "^5.0.12",
     "react-native-gesture-handler": "^2.25.0",
@@ -31,6 +33,7 @@
     "react-native-screens": "^4.10.0",
     "react-native-sound-player": "^0.14.5",
     "react-native-svg": "^15.11.2",
+    "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.2.0",
     "react-scripts": "^5.0.1",
     "redux-persist": "^6.0.0"
