--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^2.7.0",
     "@rneui/base": "^4.0.0-rc.8",
     "axios": "^1.8.4",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "react": "19.0.0",
     "react-hook-form": "^7.56.1",
