--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-clipboard/clipboard": "^1.16.2",
     "@react-native-community/slider": "^4.5.6",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/elements": "^2.3.8",
@@ -31,6 +32,7 @@
     "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
+    "react-native-share": "^12.0.9",
     "react-native-sound-player": "^0.14.5",
     "react-native-svg": "^15.11.2",
     "react-redux": "^9.2.0",
