--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "19.0.0",
     "react-hook-form": "^7.56.1",
     "react-native": "^0.79.1",
+    "react-native-audio-record": "^0.2.2",
     "react-native-contacts": "7.0.8",
     "react-native-country-codes-picker": "^2.3.5",
     "react-native-date-picker": "^5.0.12",
