--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-clipboard/clipboard": "^1.16.2",
+    "@react-native-community/blur": "^4.4.1",
     "@react-native-community/slider": "^4.5.6",
     "@react-native-documents/picker": "^10.1.3",
     "@react-native-masked-view/masked-view": "^0.3.2",
