--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "@react-native-firebase/messaging": "^22.1.0",
     "@react-native-google-signin/google-signin": "^13.2.0",
     "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/elements": "^2.3.8",
-    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.10",
     "@reduxjs/toolkit": "^2.7.0",
     "axios": "^1.8.4",
