--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-camera-roll/camera-roll": "^7.10.0",
     "@react-native-clipboard/clipboard": "^1.16.2",
     "@react-native-community/blur": "^4.4.1",
     "@react-native-community/slider": "^4.5.6",
@@ -39,6 +40,7 @@
     "react-native-date-picker": "^5.0.12",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.25.0",
+    "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.2",
     "react-native-otp-textinput": "^1.1.6",
     "react-native-reanimated": "^3.17.5",
