--- a/ios/YouthApp/Info.plist
+++ b/ios/YouthApp/Info.plist
@@ -54,6 +54,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true />
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>We need access to your photo library so you can upload a posts or a story in app</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>We need access to your photo library so you can select a photo to use as your profile picture.</string>
 	<key>MKDirectionsApplicationSupportedModes</key>
 	<array>
 		<string>MKDirectionsModeBike</string>
