--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-clipboard/clipboard": "^1.16.2",
     "@react-native-community/blur": "^4.4.1",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native-community/slider": "^4.5.6",
     "@react-native-documents/picker": "^10.1.3",
     "@react-native-firebase/app": "^22.1.0",
@@ -37,9 +38,11 @@
     "react-native-contacts": "7.0.8",
     "react-native-country-codes-picker": "^2.3.5",
     "react-native-date-picker": "^5.0.12",
+    "react-native-device-info": "^14.0.4",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-linear-gradient": "^2.8.2",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-otp-textinput": "^1.1.6",
     "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.4.0",
@@ -47,6 +50,7 @@
     "react-native-share": "^12.0.9",
     "react-native-sound-player": "^0.14.5",
     "react-native-svg": "^15.11.2",
+    "react-native-toast-message": "^2.3.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.2.0",
