--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "react-native-svg": "^15.11.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-video": "^6.14.0",
+    "react-native-video-player": "^0.16.3",
     "react-native-vision-camera": "^4.6.4",
     "react-redux": "^9.2.0",
     "react-scripts": "^5.0.1",
