--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "patch-package"
   },
   "dependencies": {
+    "@birdwingo/react-native-instagram-stories": "^1.3.12",
     "@gorhom/bottom-sheet": "^5",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-camera-roll/camera-roll": "^7.10.0",
@@ -80,6 +82,8 @@
     "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.57.1",
     "jest": "^29.6.3",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0",
     "prettier": "2.8.8",
     "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "19.0.0",
