--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-animatable": "^1.4.0",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-audio-record": "^0.2.2",
+    "react-native-audio-recorder-player": "^3.6.12",
     "react-native-blob-util": "^0.21.2",
     "react-native-contacts": "8.0.4",
     "react-native-country-codes-picker": "^2.3.5",
