--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-audio-record": "^0.2.2",
     "react-native-audio-recorder-player": "^3.6.12",
     "react-native-blob-util": "^0.21.2",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-contacts": "8.0.4",
     "react-native-country-codes-picker": "^2.3.5",
     "react-native-date-picker": "^5.0.12",
