--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-native-linear-gradient": "^2.8.2",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-otp-textinput": "^1.1.6",
+    "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
