--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "@reduxjs/toolkit": "^2.7.0",
+    "@zegocloud/zego-uikit-prebuilt-call-rn": "^6.3.2",
+    "@zegocloud/zego-uikit-rn": "^2.17.2",
     "axios": "^1.8.4",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
@@ -72,8 +74,7 @@
     "react-redux": "^9.2.0",
     "react-scripts": "^5.0.1",
     "redux-persist": "^6.0.0",
-    "@zegocloud/zego-uikit-prebuilt-call-rn": "^6.3.2",
-    "@zegocloud/zego-uikit-rn": "^2.17.2",
+    "socket.io-client": "^4.8.1",
     "zego-callkit-react-native": "^1.0.6",
     "zego-express-engine-reactnative": "^3.19.0",
     "zego-zim-react-native": "^2.19.0",
